Fix editor spacing issue

--- a/css/form-builder.css.scss
+++ b/css/form-builder.css.scss
@@ -396,4 +396,5 @@
 .public-DraftEditor-content {
   max-height: 65vh;
   overflow-y: auto;
+  padding: 0 12px;
 }
